--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap");
+
 @font-face {
   font-family: "Soulmaze";
   src: url("../public/fonts/MyFont/MADE\ Soulmaze\ PERSONAL\ USE.otf")format("woff2");
@@ -10,7 +12,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #0f172a;
-  font-family: 'Tusker Grotesk', 'sans-serif';
+  font-family: 'Oswald', 'sans-serif';
+  font-weight: 200;
 }
 
 h1,
@@ -22,15 +25,9 @@ h6,
 p {
   margin: 0;
   color: #eff1f2;
+  font-weight: 400!important;
 }
 
-h1{
-  font-size: 50px;
-}
-
-h2{
-  font-size: 30px;
-}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
