--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,11 @@ body {
    /* rosso buono per cancelare */
    /* color: #EF4444; */
    /* color: #94A3B8; */
+    padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  
 
 }
 
