--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,9 @@ p {
   font-weight: 400!important;
 }
 
+.specialP{
+  opacity: 0.7;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
