--- a/src/index.css
+++ b/src/index.css
@@ -2,57 +2,95 @@
 
 @font-face {
   font-family: "Soulmaze";
-  src: url("../public/fonts/MyFont/MADE\ Soulmaze\ PERSONAL\ USE.otf")format("woff2");
+  src: url("../public/fonts/MyFont/MADE\ Soulmaze\ PERSONAL\ USE.otf")
+    format("woff2");
   font-weight: 900;
 }
 
 /* variabili corrispondenti ai font di tutto il progetto e al loro ridimensionamento quando lo schermo cambia */
-:root{
+:root {
   /* base */
-  --fs-body: clamp(16px, 0.30vw + 15px, 18px);
+  --fs-body: clamp(16px, 0.3vw + 15px, 18px);
   --lh-body: 1.6;
 
   /* titoli */
-  --fs-h6: clamp(18px, 0.40vw + 16px, 20px);
-  --fs-h5: clamp(20px, 0.60vw + 17px, 24px);
-  --fs-h4: clamp(22px, 0.90vw + 18px, 28px);
-  --fs-h3: clamp(26px, 1.30vw + 18px, 32px);
-  --fs-h2: clamp(32px, 2.10vw + 18px, 40px);
-  --fs-h1: clamp(36px, 3.40vw + 18px, 64px); /* puoi spingere a 72–80px per hero */
+  --fs-h6: clamp(18px, 0.4vw + 16px, 20px);
+  --fs-h5: clamp(20px, 0.6vw + 17px, 24px);
+  --fs-h4: clamp(22px, 0.9vw + 18px, 28px);
+  --fs-h3: clamp(26px, 1.3vw + 18px, 32px);
+  --fs-h2: clamp(32px, 2.1vw + 18px, 40px);
+  --fs-h1: clamp(
+    36px,
+    3.4vw + 18px,
+    64px
+  ); /* puoi spingere a 72–80px per hero */
 
   --lh-h: 1.2;
 }
 
-h1 { font-size: var(--fs-h1); line-height: var(--lh-h); }
-h2 { font-size: var(--fs-h2); line-height: var(--lh-h); }
-h3 { font-size: var(--fs-h3); line-height: var(--lh-h); }
-h4 { font-size: var(--fs-h4); line-height: var(--lh-h); }
-h5 { font-size: var(--fs-h5); line-height: var(--lh-h); }
-h6 { font-size: var(--fs-h6); line-height: var(--lh-h); }
-p { font-size: var(--fs-h6); line-height: var(--lh-h); }
-.small, small { font-size: clamp(14px, 0.2vw + 13px, 16px); line-height: 1.5; }
+h1 {
+  font-size: var(--fs-h1);
+  line-height: var(--lh-h);
+}
+h2 {
+  font-size: var(--fs-h2);
+  line-height: var(--lh-h);
+}
+h3 {
+  font-size: var(--fs-h3);
+  line-height: var(--lh-h);
+}
+h4 {
+  font-size: var(--fs-h4);
+  line-height: var(--lh-h);
+}
+h5 {
+  font-size: var(--fs-h5);
+  line-height: var(--lh-h);
+}
+h6 {
+  font-size: var(--fs-h6);
+  line-height: var(--lh-h);
+}
+p {
+  font-size: var(--fs-h6);
+  line-height: var(--lh-h);
+}
+.small,
+small {
+  font-size: clamp(14px, 0.2vw + 13px, 16px);
+  line-height: 1.5;
+}
 
 body {
   margin: 0;
-  font-family: "Soulmaze",sans-serif;
-  font-size: var(--fs-body); line-height: var(--lh-body); 
+  font-family: "Soulmaze", sans-serif;
+  font-size: var(--fs-body);
+  line-height: var(--lh-body);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #0f172a;
-  font-family: 'Oswald', 'sans-serif';
+
+  font-family: "Oswald", "sans-serif";
   font-weight: 200;
-   color: #D1FAE5;
-   /* color:#A7F3D0; */
-   /* color: #CFFAFE; */
-   /* rosso buono per cancelare */
-   /* color: #EF4444; */
-   /* color: #94A3B8; */
-    padding-left: 3rem;
+  /* background-color: #0f172a; ok */
+  /* background-color: #2D2D2D; */
+    /* background-color: #051C2C; */
+/* background-color: #1e1B4B; */
+/* color: #FF6B5A; */
+background-color: #302f2b;
+/* color: #abd1c6; */
+    /* color: #00E5D9; */
+  color: #FFD369;
+  /* color: #D1FAE5; ok*/ 
+  /* color:#A7F3D0; */
+  /* color: #CFFAFE; */
+  /* rosso buono per cancelare */
+  /* color: #EF4444; */
+  /* color: #94A3B8; */
+  padding-left: 3rem;
   padding-right: 3rem;
   padding-top: 6rem;
   padding-bottom: 6rem;
-  
-
 }
 
 h1,
@@ -64,10 +102,10 @@ h6,
 p {
   margin: 0;
   /* color: #eff1f2; */
-  font-weight: 400!important;
+  font-weight: 400 !important;
 }
 
-.specialP{
+.specialP {
   opacity: 0.7;
 }
 
@@ -89,6 +127,6 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
+  height: 100vh;
   margin: auto;
 }
