--- a/src/index.css
+++ b/src/index.css
@@ -175,4 +175,87 @@ html {
   margin: auto;
 }
 
+/* test */
 
+.col {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
+  
+
+  /* Input & textarea */
+  .col input,
+  .col textarea,
+  .col select {
+    padding: 14px 12px 10px; /* spazio per la label “floating” */
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font: inherit;
+    background: #fff;
+    outline: none;
+    transition: border-color 0.2s ease;
+   
+  }
+
+  .col textarea {
+    min-height: 120px;
+    resize: vertical;
+     resize: none;
+  }
+
+  .col input:focus,
+  .col textarea:focus {
+    border-color: #0b1e33;
+  }
+
+  /* Label “floating” */
+  .col label {
+    position: absolute;
+    left: 12px;
+    top: 17px;
+    padding: 0 4px;
+    background: #fff; /* copre il bordo quando sale */
+    color: #0b1e33;
+    transform: translateY(0);
+    font-size: 14px;
+    line-height: 1;
+    pointer-events: none; /* click passa all’input */
+    transition: transform 0.2s ease, color 0.2s ease, font-size 0.2s ease;
+  }
+
+  /* 1) Quando il campo è in focus → label sale */
+  .col:focus-within label {
+    transform: translateY(-23px);
+    font-size: 14px;
+    color: #0b1e33;
+  }
+
+  .col:has([data-select-has-value="true"]) label {
+  transform: translateY(-23px);
+  font-size: 14px;
+  color: #0b1e33;
+}
+
+
+  /* 2) Quando il campo NON è vuoto → label resta su
+     (richiede placeholder=" " sull’input/textarea) */
+  .col:has(input:not(:placeholder-shown)) label,
+  .col:has(textarea:not(:placeholder-shown)) label {
+    transform: translateY(-23px);
+    font-size: 14px;
+    color: #0b1e33;
+  }
+
+/* questo serve a nascondere le frecce di default per gli input number */
+ input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+.input[type="number"] {
+  -moz-appearance: textfield; /* necessario per Firefox */
+  appearance: textfield;      /* standard */
+}
