--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 
 
   /* colori tema scuro (default) */
-  --color-background: #302f2b;
+  --color-background:  #2b2b33;
   --color-scroll-top: #2b2b2b;
   --color-hover-card: #1b1b1b;
   --color-text: #ffd369;
@@ -51,21 +51,22 @@
 
 [data-theme="light"] {
   color-scheme: light;
-  --color-background: #0f172a;
-  --color-span-hover:#5eead4;
-  --color-text-span-hover: #a7f3d038;
-   --color-text: #D1FAE5;
+  --color-background: #ffff;
+   --color-scroll-top: #e4e2de;
+  --color-span-hover:#ffff;
+  --color-text-span-hover: #000;
+   --color-text: #000;
   --color-surface: #ffffffe6;
   --color-border: #94a3b873;
   --color-toggle-bg: #ffffffe6;
   --color-toggle-text: #0f172a;
-  --color-hover-card: #1e293b;
-  --color-toggle-shadow: rgba(15, 23, 42, 0.15);
-  --color-toggle-shadow-hover: rgba(15, 23, 42, 0.22);
+  --color-hover-card: #e4e2de;
+  --color-toggle-shadow: #0f172a26;
+  --color-toggle-shadow-hover: #0f172a38;
 }
 
-[data-theme="dark"] {
-  color-scheme: dark;
+[data-theme="light"] {
+  color-scheme: light;
 }
 
 
@@ -175,7 +176,7 @@ html {
   margin: auto;
 }
 
-/* test */
+/* Css degli input */
 
 .col {
     position: relative;
@@ -262,3 +263,5 @@ input[type="number"]::-webkit-inner-spin-button {
   -moz-appearance: textfield; /* necessario per Firefox */
   appearance: textfield;      /* standard */
 }
+
+/* fine css degli input */
